courses/Learning Haskell Programming [Video]/s3/expression/.stack-work/logs/hspec-discover-2.2.4.log
Configuring hspec-discover-2.2.4...
Building hspec-discover-2.2.4...
Preprocessing library hspec-discover-2.2.4...
[1 of 2] Compiling Test.Hspec.Discover.Config ( src/Test/Hspec/Discover/Config.hs, .stack-work/dist/x86_64-osx/Cabal-1.24.0.0/build/Test/Hspec/Discover/Config.o )
[2 of 2] Compiling Test.Hspec.Discover.Run ( src/Test/Hspec/Discover/Run.hs, .stack-work/dist/x86_64-osx/Cabal-1.24.0.0/build/Test/Hspec/Discover/Run.o )
Preprocessing executable 'hspec-discover' for hspec-discover-2.2.4...
[1 of 1] Compiling Main             ( driver/hspec-discover.hs, .stack-work/dist/x86_64-osx/Cabal-1.24.0.0/build/hspec-discover/hspec-discover-tmp/Main.o )
Linking .stack-work/dist/x86_64-osx/Cabal-1.24.0.0/build/hspec-discover/hspec-discover ...

In file included from /var/folders/mt/vt9yb0p10t9g5n10qswldqhm0000gn/T/ghc50657_0/ghc_1.c:1:0: error:
    

In file included from /Users/danial/.stack/programs/x86_64-osx/ghc-8.0.1/lib/ghc-8.0.1/include/Rts.h:217:0: error:
    

/Users/danial/.stack/programs/x86_64-osx/ghc-8.0.1/lib/ghc-8.0.1/include/rts/storage/ClosureMacros.h:505:5: error:
     warning: macro expansion producing 'defined' has undefined behavior [-Wexpansion-to-defined]
#if ZERO_SLOP_FOR_LDV_PROF || ZERO_SLOP_FOR_SANITY_CHECK
    ^

/Users/danial/.stack/programs/x86_64-osx/ghc-8.0.1/lib/ghc-8.0.1/include/rts/storage/ClosureMacros.h:502:37: error:
     note: expanded from macro 'ZERO_SLOP_FOR_LDV_PROF'
#define ZERO_SLOP_FOR_LDV_PROF     (defined(PROFILING))
                                    ^

/Users/danial/.stack/programs/x86_64-osx/ghc-8.0.1/lib/ghc-8.0.1/include/rts/storage/ClosureMacros.h:505:31: error:
     warning: macro expansion producing 'defined' has undefined behavior [-Wexpansion-to-defined]
#if ZERO_SLOP_FOR_LDV_PROF || ZERO_SLOP_FOR_SANITY_CHECK
                              ^

/Users/danial/.stack/programs/x86_64-osx/ghc-8.0.1/lib/ghc-8.0.1/include/rts/storage/ClosureMacros.h:503:37: error:
     note: expanded from macro 'ZERO_SLOP_FOR_SANITY_CHECK'
#define ZERO_SLOP_FOR_SANITY_CHECK (defined(DEBUG) && !defined(THREADED_RTS))
                                    ^

/Users/danial/.stack/programs/x86_64-osx/ghc-8.0.1/lib/ghc-8.0.1/include/rts/storage/ClosureMacros.h:505:31: error:
     warning: macro expansion producing 'defined' has undefined behavior [-Wexpansion-to-defined]

/Users/danial/.stack/programs/x86_64-osx/ghc-8.0.1/lib/ghc-8.0.1/include/rts/storage/ClosureMacros.h:503:56: error:
     note: expanded from macro 'ZERO_SLOP_FOR_SANITY_CHECK'
#define ZERO_SLOP_FOR_SANITY_CHECK (defined(DEBUG) && !defined(THREADED_RTS))
                                                       ^

/Users/danial/.stack/programs/x86_64-osx/ghc-8.0.1/lib/ghc-8.0.1/include/rts/storage/ClosureMacros.h:523:5: error:
     warning: macro expansion producing 'defined' has undefined behavior [-Wexpansion-to-defined]
#if ZERO_SLOP_FOR_LDV_PROF && !ZERO_SLOP_FOR_SANITY_CHECK
    ^

/Users/danial/.stack/programs/x86_64-osx/ghc-8.0.1/lib/ghc-8.0.1/include/rts/storage/ClosureMacros.h:502:37: error:
     note: expanded from macro 'ZERO_SLOP_FOR_LDV_PROF'
#define ZERO_SLOP_FOR_LDV_PROF     (defined(PROFILING))
                                    ^

/Users/danial/.stack/programs/x86_64-osx/ghc-8.0.1/lib/ghc-8.0.1/include/rts/storage/ClosureMacros.h:523:32: error:
     warning: macro expansion producing 'defined' has undefined behavior [-Wexpansion-to-defined]
#if ZERO_SLOP_FOR_LDV_PROF && !ZERO_SLOP_FOR_SANITY_CHECK
                               ^

/Users/danial/.stack/programs/x86_64-osx/ghc-8.0.1/lib/ghc-8.0.1/include/rts/storage/ClosureMacros.h:503:37: error:
     note: expanded from macro 'ZERO_SLOP_FOR_SANITY_CHECK'
#define ZERO_SLOP_FOR_SANITY_CHECK (defined(DEBUG) && !defined(THREADED_RTS))
                                    ^

/Users/danial/.stack/programs/x86_64-osx/ghc-8.0.1/lib/ghc-8.0.1/include/rts/storage/ClosureMacros.h:523:32: error:
     warning: macro expansion producing 'defined' has undefined behavior [-Wexpansion-to-defined]

/Users/danial/.stack/programs/x86_64-osx/ghc-8.0.1/lib/ghc-8.0.1/include/rts/storage/ClosureMacros.h:503:56: error:
     note: expanded from macro 'ZERO_SLOP_FOR_SANITY_CHECK'
#define ZERO_SLOP_FOR_SANITY_CHECK (defined(DEBUG) && !defined(THREADED_RTS))
                                                       ^

/Users/danial/.stack/programs/x86_64-osx/ghc-8.0.1/lib/ghc-8.0.1/include/rts/storage/ClosureMacros.h:552:5: error:
     warning: macro expansion producing 'defined' has undefined behavior [-Wexpansion-to-defined]
#if ZERO_SLOP_FOR_LDV_PROF && !ZERO_SLOP_FOR_SANITY_CHECK
    ^

/Users/danial/.stack/programs/x86_64-osx/ghc-8.0.1/lib/ghc-8.0.1/include/rts/storage/ClosureMacros.h:502:37: error:
     note: expanded from macro 'ZERO_SLOP_FOR_LDV_PROF'
#define ZERO_SLOP_FOR_LDV_PROF     (defined(PROFILING))
                                    ^

/Users/danial/.stack/programs/x86_64-osx/ghc-8.0.1/lib/ghc-8.0.1/include/rts/storage/ClosureMacros.h:552:32: error:
     warning: macro expansion producing 'defined' has undefined behavior [-Wexpansion-to-defined]
#if ZERO_SLOP_FOR_LDV_PROF && !ZERO_SLOP_FOR_SANITY_CHECK
                               ^

/Users/danial/.stack/programs/x86_64-osx/ghc-8.0.1/lib/ghc-8.0.1/include/rts/storage/ClosureMacros.h:503:37: error:
     note: expanded from macro 'ZERO_SLOP_FOR_SANITY_CHECK'
#define ZERO_SLOP_FOR_SANITY_CHECK (defined(DEBUG) && !defined(THREADED_RTS))
                                    ^

/Users/danial/.stack/programs/x86_64-osx/ghc-8.0.1/lib/ghc-8.0.1/include/rts/storage/ClosureMacros.h:552:32: error:
     warning: macro expansion producing 'defined' has undefined behavior [-Wexpansion-to-defined]

/Users/danial/.stack/programs/x86_64-osx/ghc-8.0.1/lib/ghc-8.0.1/include/rts/storage/ClosureMacros.h:503:56: error:
     note: expanded from macro 'ZERO_SLOP_FOR_SANITY_CHECK'
#define ZERO_SLOP_FOR_SANITY_CHECK (defined(DEBUG) && !defined(THREADED_RTS))
                                                       ^
9 warnings generated.
Installing library in
/Users/danial/.stack/snapshots/x86_64-osx/lts-7.7/8.0.1/lib/x86_64-osx-ghc-8.0.1/hspec-discover-2.2.4-6OsWF6p1kycGNLQpxduJUs
Installing executable(s) in
/Users/danial/.stack/snapshots/x86_64-osx/lts-7.7/8.0.1/bin
Registering hspec-discover-2.2.4...
